# seedeval

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/runs/[id]/: page.tsx
dashboard/components/: CheckResultCard.tsx  FrameCritiqueList.tsx  NewRunForm.tsx  ProgressStream.tsx  RunCard.tsx  ScoreBadge.tsx
dashboard/lib/: api.ts  types.ts
scripts/: smoke.py  verify_judge.py
seedeval/: __init__.py  config.py  db.py  models.py  pipeline.py  smoke_test.py  storage.py
seedeval/agents/: __init__.py  orchestrator.py  vlm_judge.py
seedeval/api/: __init__.py  main.py  sse.py
seedeval/checks/: __init__.py  adherence.py  base.py  cost.py  temporal.py
seedeval/providers/: __init__.py  aimlapi.py  base.py
tests/: __init__.py  test_checks.py  test_orchestrator.py
